# dagster-celery-deployment

./: .gitignore  README.md
example/: .dockerignore  Dockerfile  pyproject.toml
example/dagster_example/: definitions.py
example/dev/: dagster.yaml  docker-compose.yaml
example/dev/dagster_celery/config/df01f12b-7712-41b2-b744-467acccfd294/: dagster_celery_config.py
example/dev/docker/: celery.yaml  docker.env  local.env  workspace.yaml
helm/dagster/: Chart.yaml  values.yaml
helm/dagster/templates/: configmap-celery.yaml  configmap-env-celery.yaml  configmap-env-codelocation.yaml  configmap-env-daemon.yaml  configmap-env-shared.yaml  configmap-env-webserver.yaml  configmap-instance.yaml  configmap-workspace.yaml  deployment-celery-worker.yaml  deployment-codelocation.yaml  deployment-daemon.yaml  deployment-webserver.yaml  role.yaml  rolebinding.yaml  secret-celery.yaml  secret-postgres.yaml  service-codelocation.yaml  service-flower.yaml  service-webserver-node.yaml  service-webserver.yaml  serviceaccount.yaml
helm/dagster/templates/helpers/: _dagster.tpl  _helpers.tpl  _instance.tpl
